--- a/app/src/main/res/layout/fragment_add_note.xml
+++ b/app/src/main/res/layout/fragment_add_note.xml
@@ -8,25 +8,28 @@
 
     <EditText
         android:id="@+id/title"
+        style="@style/spinner_style"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="top"
         android:hint="@string/title"
-        android:inputType="textMultiLine"
-        style="@style/spinner_style"
+        android:inputType="textMultiLine|textCapWords"
         android:maxLines="3"
+        android:padding="5dp"
+        android:minLines="2"
         android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 
     <EditText
         android:id="@+id/body"
+        style="@style/spinner_style"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/title"
         android:gravity="top"
         android:hint="@string/note"
-        android:minLines="2"
-        style="@style/spinner_style"
-        android:inputType="textMultiLine"
+        android:padding="5dp"
+        android:inputType="textMultiLine|textCapSentences"
+        android:minLines="10"
         android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 
 
