--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -14,6 +14,9 @@
         <action
             android:id="@+id/action_homeFragment_to_addNoteFragment"
             app:destination="@id/addNoteFragment" />
+        <action
+            android:id="@+id/action_homeFragment_to_archiveFragment"
+            app:destination="@id/archiveFragment" />
     </fragment>
     <fragment
         android:id="@+id/addNoteFragment"
@@ -32,5 +35,14 @@
             android:name="ClickFrom"
             app:argType="string" />
 
+    </fragment>
+    <fragment
+        android:id="@+id/archiveFragment"
+        android:name="com.testingsite.mynotes.ui.ArchivesFragment"
+        android:label="My Archives"
+        tools:layout="@layout/fragment_archives">
+        <action
+            android:id="@+id/action_archiveFragment_to_addNoteFragment"
+            app:destination="@id/addNoteFragment" />
     </fragment>
 </navigation>
