--- a/app/src/main/res/menu/popup_menu.xml
+++ b/app/src/main/res/menu/popup_menu.xml
@@ -3,7 +3,10 @@
 
     <item
         android:id="@+id/addToArchive"
-        android:title="@string/add_to_archive"
-        />
+        android:title="@string/add_to_archive" />
+
+    <item
+        android:id="@+id/delete"
+        android:title="@string/delete" />
 
 </menu>
