--- a/app/src/main/res/layout/fragment_archives.xml
+++ b/app/src/main/res/layout/fragment_archives.xml
@@ -3,7 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/grey"
     tools:context=".ui.ArchivesFragment">
 
     <androidx.recyclerview.widget.RecyclerView
@@ -11,5 +10,15 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:listitem="@layout/single_note"/>
+
+    <TextView
+        android:id="@+id/no_notes_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:text="@string/no_archives_saved"
+        android:textAlignment="center"
+        android:textSize="14sp" />
 
 </RelativeLayout>
