--- a/app/src/main/res/layout/single_note.xml
+++ b/app/src/main/res/layout/single_note.xml
@@ -5,6 +5,7 @@
     android:id="@+id/single_note_view"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@drawable/white_box_without_border"
     android:layout_margin="3dp"
     android:padding="5dp">
 
@@ -28,12 +29,11 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
-            android:layout_marginEnd="314dp"
             android:ellipsize="end"
             android:maxLines="3"
             android:padding="5dp"
             android:textColor="@color/textColor"
-            android:textStyle="bold"
+            android:fontFamily="@font/barlow_semi_bold"
             app:layout_constraintEnd_toStartOf="@+id/menu_image"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -48,6 +48,7 @@
             android:maxLines="10"
             android:minLines="3"
             android:padding="5dp"
+            android:fontFamily="@font/barlow_regular"
             android:text="@string/note"
             android:textColor="@color/textColor"
             app:layout_constraintEnd_toEndOf="parent"
