--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,73 +4,72 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/grey"
-    tools:context=".ui.HomeFragment">
+    android:padding="5dp"
+    tools:context=".ui.MyNotesFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view_notes"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:backgroundTint="@color/grey"
-        tools:itemCount="2"
-        tools:listitem="@layout/single_note" />
+        android:layout_height="match_parent"/>
 
     <TextView
         android:id="@+id/no_notes_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
+        android:layout_centerInParent="true"
         android:text="@string/no_data"
         android:textAlignment="center"
-        android:textSize="18sp" />
+        android:textSize="14sp" />
 
-    <TextView
-        android:id="@+id/tv_note"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/fabNote"
-        android:layout_alignBottom="@+id/fabNote"
-        android:layout_toStartOf="@+id/fabNote"
-        android:gravity="center"
-        android:text="@string/add_a_note"
-        android:textAlignment="center" />
+    <!--<TextView
+       android:id="@+id/tv_note"
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:layout_alignTop="@+id/fabNote"
+       android:layout_alignBottom="@+id/fabNote"
+       android:layout_toStartOf="@+id/fabNote"
+       android:gravity="center"
+       android:text="@string/add_a_note"
+       android:textAlignment="center" />
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fabNote"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/fabReminder"
-        android:layout_alignParentEnd="true"
-        android:layout_centerInParent="true"
-        android:layout_margin="10dp"
-        android:contentDescription="@string/add_item_click"
-        android:src="@drawable/ic_baseline_note_add_24"
-        app:backgroundTint="@color/colorPrimary"
-        app:fabSize="mini" />
+   <com.e.android.material.floatingactionbutton.FloatingActionButton
+       android:id="@+id/fabNote"
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:layout_above="@+id/fabReminder"
+       android:layout_alignParentEnd="true"
+       android:layout_centerInParent="true"
+       android:layout_marginStart="10dp"
+       android:layout_marginTop="10dp"
+       android:layout_marginEnd="10dp"
+       android:layout_marginBottom="10dp"
+       android:contentDescription="@string/add_item_click"
+       android:src="@drawable/ic_baseline_note_add_24"
+       app:backgroundTint="@color/colorPrimary"
+       app:fabSize="mini" />
 
-    <TextView
-        android:id="@+id/tv_reminder"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/fabReminder"
-        android:layout_alignBottom="@+id/fabReminder"
-        android:layout_toStartOf="@+id/fabReminder"
-        android:gravity="center"
-        android:text="@string/add_a_reminder"
-        android:textAlignment="center" />
+   <TextView
+       android:id="@+id/tv_reminder"
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:layout_alignTop="@+id/fabReminder"
+       android:layout_alignBottom="@+id/fabReminder"
+       android:layout_toStartOf="@+id/fabReminder"
+       android:gravity="center"
+       android:text="@string/add_a_reminder"
+       android:textAlignment="center" />
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fabReminder"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/button_add"
-        android:layout_alignParentEnd="true"
-        android:layout_margin="10dp"
-        android:contentDescription="@string/add_item_click"
-        android:src="@drawable/reminder"
-        app:backgroundTint="@color/colorPrimary"
-        app:fabSize="mini" />
+   <com.google.android.material.floatingactionbutton.FloatingActionButton
+       android:id="@+id/fabReminder"
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:layout_above="@+id/button_add"
+       android:layout_alignParentEnd="true"
+       android:layout_margin="10dp"
+       android:contentDescription="@string/add_item_click"
+       android:src="@drawable/reminder"
+       app:backgroundTint="@color/colorPrimary"
+       app:fabSize="mini" />-->
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/button_add"
@@ -78,11 +77,11 @@
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_margin="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
         android:contentDescription="@string/add_item_click"
-        android:padding="5dp"
-        android:src="@drawable/ic_baseline_add_24"
+        android:src="@drawable/ic_baseline_note_add_24"
         app:backgroundTint="@color/colorPrimary"
-        app:fabSize="normal" />
+        app:fabSize="auto" />
 
 </RelativeLayout>
