--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,6 @@
     <color name="grey">#808080</color>
     <color name="navyblue">#000080</color>
 
+    <color name="textInput">#656564</color>
+
 </resources>
